# CryptoViewer

./: README.md
backend/: Cargo.toml  json1.json
backend/src/: main.rs
backend/src/api/: crypto_news.rs  crypto_prices.rs
cryptoapp/: package-lock.json  readme.txt
cryptoapp/src/: App.css  App.js  index.js
cryptoapp/src/app/: store.js
cryptoapp/src/components/: CryptoDetails.jsx  Cryptocurrencies.jsx  Exchanges.jsx  HomePage.jsx  LineChart.jsx  Navbar.jsx  News.jsx
cryptoapp/src/services/: cryptoApi.js  cryptoNewsApi.js
