[package]
name = "get_coins"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower-http = {version="0.5.2", features = ["cors"]}
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"